changes in partition key in q2

--- a/project_cassandra.ipynb
+++ b/project_cassandra.ipynb
@@ -239,7 +239,7 @@
    },
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace \n",
+    "# Create a Keyspace \n",
     "try:\n",
     "    session.execute(\"\"\"\n",
     "    CREATE KEYSPACE IF NOT EXISTS udacity \n",
@@ -268,7 +268,7 @@
    },
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
+    "# Set KEYSPACE to the keyspace specified above\n",
     "try:\n",
     "    session.set_keyspace('udacity')\n",
     "except Exception as e:\n",
@@ -464,7 +464,7 @@
     "                  song TEXT, \\\n",
     "                  firstName TEXT, \\\n",
     "                  lastName TEXT, \\\n",
-    "                  PRIMARY KEY (userId, sessionId, itemInSession))\"\n",
+    "                  PRIMARY KEY ((userId, sessionId), itemInSession))\"\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
@@ -620,7 +620,7 @@
     "                  firstName TEXT, \\\n",
     "                  lastName TEXT, \\\n",
     "                  userId INT, \\\n",
-    "                  PRIMARY KEY (song, firstName, lastName, userId))\"\n",
+    "                  PRIMARY KEY (song, userId))\"\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
@@ -687,13 +687,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Sara</td>\n",
-       "      <td>Johnson</td>\n",
+       "      <td>Tegan</td>\n",
+       "      <td>Levine</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Tegan</td>\n",
-       "      <td>Levine</td>\n",
+       "      <td>Sara</td>\n",
+       "      <td>Johnson</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -702,8 +702,8 @@
       "text/plain": [
        "    firstName lastName\n",
        "0  Jacqueline    Lynch\n",
-       "1        Sara  Johnson\n",
-       "2       Tegan   Levine"
+       "1       Tegan   Levine\n",
+       "2        Sara  Johnson"
       ]
      },
      "execution_count": 16,
@@ -774,6 +774,15 @@
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
